--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,2 @@
-<a href="https://github.com/KingFelix/emerald/archive/master.zip">Download</a>
-<a href="https://github.com/KingFelix/emerald">Project on Github</a>
+<a href="https://github.com/LArrowHead/StoryOfMyLife/archive/master.zip">Download</a>
+<a href="https://github.com/LArrowHead/StoryOfMyLife">Project on Github</a>
