--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -11,8 +11,8 @@
 }
 
 html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, img {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   border: 0;
 }
 
