--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -45,3 +45,13 @@ a {
 		color: darken($main-color, 5%);
 	}
 }
+.ml12 {
+  font-weight: 200px;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+.ml12 .letter {
+	display: inline-block;
+	line-height: 1em;
+}
