--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -6,19 +6,19 @@
 
 * {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, img {
-  margin: 0px;
-  padding: 0px;
+    -moz-box-sizing: border-box;
+      box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
-
 /*- Base color -*/
 
-$main-color: #F52C01;
+$main-color: #145de0;
 $background-color: #FDFDFD;
 $text-color: #222222;
 
@@ -47,7 +47,7 @@ a {
 }
 .ml12 {
   font-weight: 200px;
-  font-size: 1.8em;
+  font-size: 1.4em;
   text-transform: uppercase;
   letter-spacing: 0.5em;
 }
